--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="scripts.js"></script>
+    <title>Taller eventos</title>
+    
 </head>
 <body>
-    <button>Saludar</button>
+    <button onclick="saludar()">Saludar</button>
+    
 </body>
 </html>
