Funcion para marcar div y estilos del div

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
+    <script src="eventos.js"></script>
     <title>Taller eventos</title>
     
 </head>
 <body>
+    <div class="boton">
     <button onclick="saludar()">Saludar</button>
-    
+    </div>
 </body>
 </html>
